--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "date-fns": "^3.6.0",
     "framer-motion": "^12.4.3",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.475.0",
     "qrcode.react": "^4.2.0",
