--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^6.0.0",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
